src/css/style.css
body {
  background: white;
  font-family: "Roboto", sans-serif;

  /* font-weight: bold !important; */
  margin: 0;
  color: #fafafa;

  /* overflow-y: hidden; */
}

.bcontainer {
  position: relative;
  height: 80vh;
}

.bcontainer::before {
  background: url("../images/smooth-bg.jpg") center / cover;
  content: "";
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  z-index: -1;
  opacity: 0.5;
}

table {
  background-color: #fff;
}

header {
  
}

nav {
  background: #fff;
  padding: 1rem;
  top: 0;
  left: 0;
  right: 0;
  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
  min-height: 10vh;
}

footer {
  background: #fafafa;
  padding: 20px;
  text-align: center;
  font-size: 0.8em;
  color: #666;
  min-height: 10vh;
}

input#addBtn,
button {
  /* border-color: black; */
  background-color: #ec7242 !important;
}

input#addBtn:hover,
button:hover {
  background-color: #ec5242 !important;
}

h1,
h2 {
  font-family: "Poppins", sans-serif;
  font-weight: bold;
}

p {
  font-family: "Roboto", sans-serif !important;
  font-weight: bold !important;
}

.mobMenu {
  height: 100vh;
  display: none;
  flex-direction: column;
}

.mobMenu > ul > li {
  display: flex;
  margin-top: 40px;
  margin-right: 32px;
  align-items: center;
  justify-content: space-between;
}

.mobMenu > a {
  align-items: center;
  align-self: flex-end;
}

.mobMenu > ul > li > a {
  font-size: 24px;
  color: grey;
  font-weight: bold;
  text-transform: uppercase;
}

.section1 {
  background-image: url("../img/bg.jpg");
  background-color: #d3d3d3;
  background-blend-mode: lighten;
}

#closeIcon {
  text-decoration: none !important;
}

.closeIcon {
  margin-top: 16px;
  margin-right: 28px;
  color: black;
  cursor: pointer;
}

.cell {
  text-align: right !important;
}

.imgLogo {
  width: 58px;
  height: 58px;
  border-radius: 50%;
}

#container {
  opacity: 1;
  z-index: 1;
}

@media (max-width: 768px) {
  .hidden-mobile {
    display: none;
  }
}

@media (min-width: 768px) {
  .shown-mobile {
    display: none;
  }
}

